# titanic-insights

./: .gitignore  KAGGLE_SETUP.md  README.md  pyproject.toml
models/: logreg_titanic.joblib
notebooks/: 00_exploracao.ipynb
src/api/: api.py
src/data/: download.py
src/model/: train.py
src/processing/: preprocessing.py
src/streamlit/: app.py
titanic_insights/: __init__.py  cli.py
