[tool.poetry]
name = "titanic-insights"
version = "0.1.0"
description = "Pipeline de ML para análise de sobrevivência no Titanic"
authors = ["Lucas <devlucasteles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
numpy = "^2.3.0"
scikit-learn = "^1.7.0"
jupyterlab = "^4.4.3"
matplotlib = "^3.10.3"
black = {extras = ["jupyter"], version = "^25.1.0"}
seaborn = "^0.13.2"
xgboost = "^3.0.2"
kaggle = "^1.7.4.5"
rich = "^14.0.0"
click = "^8.2.1"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
uvicorn = "^0.34.3"
requests = "^2.32.3"
streamlit = "^1.46.0"


[tool.poetry.scripts]
download-data = "src.data.download:main"
titanic-cli = "titanic_insights.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
